--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
            </main> 
             
            <footer class="copyright">
-            <p>Copyright &copy; Saatvik. Made with <i class="fa-solid fa-heart"></i> by Orchids International School</p>
+            <p>Copyright &copy; Made with <i class="fa-solid fa-heart"></i> Abhiroo[</p>
            </footer>
 
     </body>
