--- a/About.html
+++ b/About.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>About</title>
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
         <!-- <script src="/functionality.js>"></script> -->
     </head>
@@ -16,7 +16,7 @@
             
             <li><a href="index.html">Home</a></li>
             <li><a href="About.html">About</a></li>
-            <li><a href="Portfolio.html">Portfolio</a></li>
+            <li><a href="Portfolio 1.html">Portfolio</a></li>
             <li><a href="Contact.html">Contact</a></li>
         </ul>
             </nav>
@@ -55,7 +55,7 @@
         </section>
         </main>
         <footer class="copyright">
-            <p>Copyright &copy; Abhiroop. Made by <i class="fa-solid fa-cloud"></i> Saiqua</p>
+            <p>Copyright &copy;Made by <i class="fa-solid fa-cloud"></i> Abhiroop</p>
            </footer>
         
            <script>
